--- a/frontend-client/src/index.css
+++ b/frontend-client/src/index.css
@@ -1,5 +1,34 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
+
+body, html{
+  margin: 0px;
+  font-family: 'Open Sans', sans-serif;
+  width:100%;
+  height:100%;
+
+}
+
+body.core{
+  background-color: #e6ecf0;
+}
+
+#root{
+  width:100%;
+  height:100%;
+}
+
+
+.flex{
+  flex: 1;
+}
+
+a{
+  color: #2196f3;
+  text-decoration: none;
+}
+
+.container{
+  width:1440px;
+  margin-left:auto;
+  margin-right:auto;
 }
